refact folder strucure

--- a/Chinook/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/Chinook/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
-@using Chinook.Models
+@using Chinook.Domain.Models
 @using Microsoft.AspNetCore.Identity
+@    using Chinook.Models
+@    using Microsoft.AspNetCore.Identity
 @attribute [IgnoreAntiforgeryToken]
 @inject SignInManager<ChinookUser> SignInManager
 @functions {
