--- a/Chinook/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/Chinook/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,7 @@
-﻿@using Chinook.Models
+﻿@using Chinook.Domain.Models
 @using Microsoft.AspNetCore.Identity
+@    using Chinook.Models
+@    using Microsoft.AspNetCore.Identity
 @inject SignInManager<ChinookUser> SignInManager
 @inject UserManager<ChinookUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
