--- a/Chinook/Pages/ArtistPage.razor
+++ b/Chinook/Pages/ArtistPage.razor
@@ -1,10 +1,10 @@
 ﻿@page "/artist/{ArtistId:long}"
-@attribute [Authorize]
-
-@using Chinook.Models
-@using Chinook.ClientModels
+@using Chinook.Domain
+@using Chinook.Domain.ClientModels
+@using Chinook.Domain.Models
 @using Microsoft.EntityFrameworkCore
-@using System.Security.Claims;
+@using System.Security.Claims
+@attribute [Authorize]
 
 @if (!string.IsNullOrWhiteSpace(InfoMessage))
 {
@@ -25,15 +25,15 @@
 else
 {
     <h1>@Artist.Name</h1>
-        <table class="table table-striped table-hover table-sm">
-            <thead>
-                <tr>
-                    <th>Album title</th>
-                    <th>Track name</th>
-                    <th></th>
+    <table class="table table-striped table-hover table-sm">
+        <thead>
+            <tr>
+                <th>Album title</th>
+                <th>Track name</th>
+                <th></th>
             </tr>
-            </thead>
-            <tbody>
+        </thead>
+        <tbody>
             @foreach (var track in Tracks)
             {
                 <tr>
@@ -52,8 +52,8 @@ else
                     </td>
                 </tr>
             }
-            </tbody>
-        </table>
+        </tbody>
+    </table>
 
 }
 
