--- a/Chinook/Shared/MainLayout.razor
+++ b/Chinook/Shared/MainLayout.razor
@@ -1,7 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <PageTitle>Chinook</PageTitle>
-
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 <div class="page">
     <div class="sidebar">
         <NavMenu />
