--- a/Chinook/Pages/Index.razor
+++ b/Chinook/Pages/Index.razor
@@ -1,6 +1,7 @@
-﻿page "/"
+﻿@page "/"
 @using Chinook.Domain.Models
 @using Chinook.Domain
+@using Chinook.Services.Interfaces
 @using Microsoft.EntityFrameworkCore
 @attribute [Authorize]
 
@@ -14,41 +15,54 @@
 }
 else
 {
-    <table class="table table-striped table-hover table-sm">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Number of albums</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var artist in Artists)
-            {
+    <MudTextField @bind-Value="@searchTerm" Label="Search Artist" Variant="Variant.Outlined"
+                  Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.Search"
+                  AdornmentColor="Color.Tertiary" />
+
+
+    @if (Artists.Count > 0)
+    {
+        <br>
+        <table class="table table-striped table-hover table-sm">
+            <thead>
                 <tr>
-                    <td><a href="Artist/@artist.ArtistId">@artist.Name</a></td>
-                    <td>@artist.Albums.Count()</td>
+                    <th>Name</th>
+                    <th>Number of albums</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var artist in Artists)
+                {
+                    <tr>
+                        <td><a href="Artist/@artist.ArtistId">@artist.Name</a></td>
+                        <td>@artist.Albums.Count()</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
 }
 
 @code {
-    private List<Artist> Artists;
     [Inject] IDbContextFactory<ChinookContext> DbFactory { get; set; }
+    [Inject] IArtistService ArtistService { get; set; }
+
+    private string searchTerm;
+    private List<Artist> AllArtists;
+    private List<Artist> Artists => string.IsNullOrWhiteSpace(searchTerm)
+        ? AllArtists : GetSearchedArtists();
 
     protected override async Task OnInitializedAsync()
     {
         await InvokeAsync(StateHasChanged);
-        Artists = await GetArtists();
+        AllArtists = ArtistService.GetAllArtists().Result;
     }
 
-    public async Task<List<Artist>> GetArtists()
+    public List<Artist> GetSearchedArtists()
     {
-        var dbContext = await DbFactory.CreateDbContextAsync();
-        var users = dbContext.Users.Include(a => a.UserPlaylists).ToList();
+        return AllArtists.Where(a => a.Name != null
+                                   && a.Name.ToLower().Contains(searchTerm.ToLower())).ToList();
 
-        return dbContext.Artists.ToList();
     }
 
     public async Task<List<Album>> GetAlbumsForArtist(int artistId)
