--- a/Chinook/Shared/NavMenu.razor
+++ b/Chinook/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
                 </MudLink>
 
                 <MudListItem Icon="@Icons.Material.Outlined.VideoLibrary" IconColor="Color.Info"
-                             Text="My Play Lists" InitiallyExpanded="false">
+                             Text="@navMyPlayListsTxt" InitiallyExpanded="false">
                     <NestedList>
                         @if (UserPlayLists?.Count > 0)
                         {
@@ -62,6 +62,7 @@
     private Task<AuthenticationState> authenticationState { get; set; }
 
     private string? currentUserId;
+    private string navMyPlayListsTxt;
     private bool collapseNavMenu = true;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
@@ -71,6 +72,7 @@
     protected override async Task OnInitializedAsync()
     {
         await InvokeAsync(StateHasChanged);
+
         currentUserId = await GetUserId();
         GetPlayLists();
 
@@ -89,6 +91,7 @@
         {
             UserPlayLists = PlayListService.GetUserPlaylist(currentUserId);
             FavoritePlaylist = PlayListService.GetFavoritePlaylist(currentUserId);
+            navMyPlayListsTxt = "Play Lists" + " ("+ UserPlayLists.Count +")";
         }        
     }
 
